[package]
name = "polycvss"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# ref: https://gist.github.com/SmallEndian/05e11181b687e0aba1cfe23475b4dc04
# note: this does not work, but this seems to:
#
#   export RUSTDOCFLAGS='--default-theme=ayu'
#
# [build]
# rustdocflags=["--default-theme=ayu"]
