[package]
name = "polycvss"
version = "0.1.0"
edition = "2024"

authors = ["Paul Duncan"]
description = "CVSS v2, v3, and v4 vector string parser and score calculator."
readme = "README.md"
homepage = "https://github.com/pablotron/polycvss"
license = "MIT-0"
keywords = ["cvss", "parse", "score", "severity"]
categories = ["security", "parser-implementations"]

[dependencies]
# TODO: remove this dependency or make it a feature
serde = { version = "1.0", features = ["derive"] }

# ref: https://gist.github.com/SmallEndian/05e11181b687e0aba1cfe23475b4dc04
# note: this does not work, but this seems to:
#
#   export RUSTDOCFLAGS='--default-theme=ayu'
#
# [build]
# rustdocflags=["--default-theme=ayu"]
