[package]
name = "polycvss"
version = "0.3.1"
edition = "2024"

authors = ["Paul Duncan"]
description = "CVSS v2, v3, and v4 vector string parser and score calculator."
readme = "README.md"
homepage = "https://github.com/pablotron/polycvss"
repository = "https://github.com/pablotron/polycvss"
documentation = "https://docs.rs/polycvss"
license = "MIT-0"
keywords = ["cvss", "parse", "score", "severity"]
categories = ["security", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[[example]]
name = "cvss-score"

[[example]]
name = "metrics"

[[example]]
name = "severities"

[[example]]
name = "v2-scores"

[[example]]
name = "v4-macrovector"

[[example]]
name = "v4-nomenclature"

[[example]]
name = "versions"

# ref: https://gist.github.com/SmallEndian/05e11181b687e0aba1cfe23475b4dc04
# note: this does not work, but this seems to:
#
#   export RUSTDOCFLAGS='--default-theme=ayu'
#
# [build]
# rustdocflags=["--default-theme=ayu"]
