[package]
name = "polycvss-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.polycvss]
path = ".."

[[bin]]
name = "vector-parse"
path = "fuzz_targets/vector-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "version-parse"
path = "fuzz_targets/version-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "severity-parse"
path = "fuzz_targets/severity-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "v2-vector-parse"
path = "fuzz_targets/v2-vector-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "v3-vector-parse"
path = "fuzz_targets/v3-vector-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "v4-vector-parse"
path = "fuzz_targets/v4-vector-parse.rs"
test = false
doc = false
bench = false
