[package]
name = "polycvss-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.polycvss]
path = ".."

[[bin]]
name = "vector"
path = "fuzz_targets/vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "v2-vector"
path = "fuzz_targets/v2-vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "v3-vector"
path = "fuzz_targets/v3-vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "v4-vector"
path = "fuzz_targets/v4-vector.rs"
test = false
doc = false
bench = false
